--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.4",
+    "cross-fetch": "^3.0.6",
     "gatsby": "^2.26.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
