--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.4",
+    "apollo-server-lambda": "^2.19.0",
     "cross-fetch": "^3.0.6",
     "gatsby": "^2.26.1",
     "react": "^16.12.0",
