--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.4",
+    "@theme-ui/presets": "^0.3.4",
     "apollo-server-lambda": "^2.19.0",
     "cross-fetch": "^3.0.6",
     "gatsby": "^2.26.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "theme-ui": "^0.3.4"
   },
   "devDependencies": {
     "prettier": "2.1.2"
